--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-replace": "^1.1.1",
     "rollup-plugin-string": "^2.0.2",
+    "rollup-plugin-uglify": "^1.0.1",
     "shx": "^0.2.2",
     "stylus": "^0.54.5",
     "yargs": "^6.6.0"
