--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,25 @@
 {
   "parserOptions": {
-    "ecmaVersion": 6
+    "ecmaVersion": 6,
+    "sourceType": "module"
   },
-  "extends": "eslint:recommended"
+  "extends": "eslint:recommended",
+  "rules": {
+    "comma-dangle": ["error", "never"],
+    "no-console": "off",
+    "array-bracket-spacing": ["error", "always"],
+    "object-curly-spacing": ["error", "always"]
+  },
+  "globals": {
+    "ga": false,
+    "Power2": false,
+    "TweenMax": false,
+    "TimelineMax": false,
+    "YT": false
+  },
+  "env": {
+    "browser": true,
+    "node": true,
+    "es6": true
+  }
 }
