--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
   "globals": {
     "ga": false,
     "Power2": false,
+    "Power4": false,
     "TweenMax": false,
     "TimelineMax": false,
     "YT": false
